syntax = "proto3";

package zksync.config;

message FriWitnessVectorGenerator {
  optional uint32 max_prover_reservation_duration_in_secs = 1; // required; s
  optional uint32 prover_instance_wait_timeout_in_secs = 2; // required; s
  optional uint32 prover_instance_poll_time_in_milli_secs = 3; // required; ms
  optional uint32 prometheus_listener_port = 4; // required; u16
  optional string prometheus_pushgateway_url = 5; // required
  optional uint64 prometheus_push_interval_ms = 6; // optional; ms
  optional uint32 specialized_group_id = 7; // required; u8
}
